--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -43,7 +43,7 @@ jobs:
         cache: 'npm'
 
     - name: npm install, build, and test
-      run: |
+      run: |h
         npm install
         npm run build --if-present
         npm run test --if-present
